<resources>

    <string name="app_name">THMTimer</string>

    <!-- LoginActivity -->
    <string name="logoDescription">company_logo</string>
    <string name="settings">Settings</string>
    <string name="user">THM Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_failed">Wrong username or password.</string>
    <string name="login_remember_me">Remember me</string>
    <string name="loadingerror_studentcourselist">Loading error - Studentcourselist: %s</string>
    <string name="loadingerror_teachercourselist">Loading error - Teachercourselist: %s</string>
    <string name="loadingerror_timecategorys">Loading error - Timecategorys: %s</string>
    <string name="loadingerror_expenditures">Loading error - Expenditures: %s</string>
    <string name="loadingerror_modulelist">Loading error - Modulelist: %s</string>
    <string name="loadingerror_termlist">Loading error - Termlist: %s</string>
    <string name="loadingerror_courselist">Loading error - Courselist: %s</string>

    <!-- ModuleListActivity -->
    <string name="tab1">Student</string>
    <string name="tab2">Teacher</string>
    <string name="my_courses">My Courses</string>

    <!-- TeacherFragment -->
    <string name="students">Students</string>

    <!-- StudentFragment -->
    <string name="action_add">Add</string>
    <string name="welcome_new_user">Hi %s!\nTo join a course press the \"+\" symbol in your action bar.</string>

    <!-- ModuleDetailFragment -->
    <string name="module_details">Course Detail View</string>
    <string name="enter">Enter</string>
    <string name="moduleNumber">Module ID</string>
    <string name="cp">Credit points</string>
    <string name="responsible">Responsible</string>
    <string name="description">Description</string>
    <string name="expenditure">Workload</string>
    <string name="requirement">Requirement</string>
    <string name="testingMethod">Testing Method</string>
    <string name="sws">Semester Hours</string>
    <string name="frequency">Frequency</string>
    <string name="prerequisites">Prerequisites</string>

    <!-- ModuleSearchFragment -->
    <string name="no_data">No courses.</string>

    <!-- EnterModuleActivity -->
    <string name="enter_module">Enter Course</string>
    <string name="action_search">Search Courses</string>
    <string name="search_hint">Search…</string>

    <!-- TimeTrackingActivity -->
    <string name="timetracking_action_choose">Choose action:</string>
    <string name="timetracking_action_edit">Edit expenditure</string>
    <string name="timetracking_action_delete">Delete expenditure</string>
    <string name="timetracking_action_cancel">Cancel</string>
    <string name="timetracking_error_save">Error while saving your expenditure: %s</string>
    <string name="timetracking_error_edit">Error while editing your expenditure: %s</string>
    <string name="timetracking_error_delete">Error while deleting your expenditure: %s</string>
    
    <!-- TrackTimeActivity -->
    <string name="action_stopwatch_start">Start Stopwatch</string>
    <string name="action_stopwatch_stop">Stop Stopwatch</string>
    <string name="enter_time">Enter</string>
    <string name="enter_time_duration_invalid">Enter a duration between 0 and 24 hours in HH:mm format!</string>
    <string name="enter_time_starttime_invalid_format">Check the format for your start time!</string>
    <string name="enter_time_starttime_invalid_consistency">The start time makes no sense in respect to the duration you entered!</string>
    <string name="enter_time_format">HH:mm</string>
    <string name="enter_time_choose">Choose</string>
    <string name="enter_time_choose_landscape">Choose Duration</string>
    <string name="enter_time_choose_header">Set duration to:</string>
    <string name="enter_time_duration">Duration:</string>
    <string name="enter_time_category">Category:</string>
    <string name="enter_time_description">Description:</string>
    <string name="enter_time_description_hint">Please enter a description…</string>
    <string name="enter_time_starttime">Started at:</string>
    <string name="expenditure_enter_header">Enter a time</string>
    <string name="expenditure_list_header">Expenditures</string>
    
    <!-- TeacherCourseDetailActivity -->
    <string name="hours">Hours</string>
    <string name="courselist">Course list</string>
    <string name="piechart">Pie Chart</string>
    <string name="inscribedstudents">Enrolled Students</string>
	<string name="course_details">Course details</string>
    <string name="history">History</string>
    <string name="showCategories">Show categories</string>
    <string name="hideCategories">Hide categories</string>
    <string name="showTotal">Show total</string>
    <string name="hideTotal">Hide total</string>
    <string name="loadingerror_statisticsdata">Error while loading statisticsdata: %s</string>
	
	<!-- TeacherCreateCourse -->
	<string name="create">Create</string>
	<string name="courseName">Coursename</string>
	<string name="teacher">Teacher</string>
	<string name="startDate">Start date</string>
	<string name="createcourse_no_name">Please enter a course name.</string>
	<string name="createcourse_no_desc">Please enter a course description.</string>
	
    <!-- Stopwatch -->
    <string name="stopwatch_header">Stopwatch</string>
    <string name="stopwatch_zerotime">00:00:00</string>
    <string name="stopwatch_action_abort">Abort</string>
    <string name="stopwatch_action_start">Start</string>
    <string name="stopwatch_action_pause">Pause</string>
    <string name="stopwatch_action_resume">Resume</string>
    <string name="stopwatch_action_stop">Stop</string>
    <string name="stopwatch_abort_header">Attention</string>
    <string name="stopwatch_abort_message">Do you really want to abort the time measurement?</string>
    <string name="stopwatch_abort_positive">Yes</string>
    <string name="stopwatch_abort_negative">No</string>
    <string name="stopwatch_stopped_less_than_one_minute">Times less than one minute can\'t be saved. Do you want to abort the time measurement?</string>
    
    <!-- SettingsFragment -->
    <string name="settingUsername">Remember Username</string>
    <string name="at">at</string>
    <string name="colorAlert">GREEN > YELLOW > RED</string>
    <string name="color">Color</string>
    <string name="confirm">Confirm</string>
    
    <!-- Connection -->
    <string name="connection_unreachable">Server unreachable!</string>
    <string name="connection_loading_user">Loading user. Please wait…</string>
    <string name="connection_loading_courses">Loading courses. Please wait…</string>
    <string name="connection_loading_modules">Loading modules. Please wait…</string>
	<string name="connection_loading_terms">Loading terms. Please wait…</string>
    <string name="connection_loading_statistics">Loading statistics. Please wait…</string>
    <string name="connection_loading_categories">Loading time categories. Please wait…</string>
    <string name="connection_loading_expenditures">Loading your expenditures. Please wait…</string>
    <string name="connection_saving_expenditures">Saving your expenditure. Please wait…</string>
    <string name="connection_deleting_expenditure">Deleting your expenditure. Please wait…</string>
    <string name="connection_join_course">Joining course. Please wait…</string>
    <string name="connection_create_course">Creating course. Please wait…</string>
    
</resources>
